update sdoc version and sdoc translate

--- a/media/sdoc-editor/locales/cs/sdoc-editor.json
+++ b/media/sdoc-editor/locales/cs/sdoc-editor.json
@@ -54,6 +54,7 @@
   "Edit": "Upravit",
   "Copy": "Kopírovat",
   "Copied": "Zkopírováno",
+  "Cut": "Cut",
   "Internal_link": "Interní odkaz",
   "Copy_internal_link": "Interní odkaz byl zkopírován do schránky",
   "Internal_link_desc": "Interní odkaz směřuje na soubor nebo složku u které má uživatel oprávnění ke čtení.",
