--- a/media/sdoc-editor/locales/de/sdoc-editor.json
+++ b/media/sdoc-editor/locales/de/sdoc-editor.json
@@ -54,6 +54,7 @@
   "Edit": "Bearbeiten",
   "Copy": "Kopieren",
   "Copied": "Kopiert",
+  "Cut": "Cut",
   "Internal_link": "Interner Link",
   "Copy_internal_link": "Der interne Link wurde in den Zwischenspeicher kopiert.",
   "Internal_link_desc": "Interne Links sind Verweise auf Dateien bzw. Ordner, die nur von Benutzer/innen mit mindestens Leserechten für die Dateien bzw. Ordner genutzt werden können. Interne Links eignen sich insbesondere für die interne Kommunikation in Ticket-/CRM-Systemen sowie E-Mails und Chats.",
