--- a/media/sdoc-editor/locales/it/sdoc-editor.json
+++ b/media/sdoc-editor/locales/it/sdoc-editor.json
@@ -54,6 +54,7 @@
   "Edit": "Modifica",
   "Copy": "Copia",
   "Copied": "Copiato",
+  "Cut": "Cut",
   "Internal_link": "Collegamento Interno",
   "Copy_internal_link": "Il collegamento interno è stato copiato negli appunti",
   "Internal_link_desc": "Un collegamento interno è un collegamento a un file o una cartella a cui gli utenti possono accedere con autorizzazione di lettura al file o alla cartella.",
