--- a/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
@@ -54,6 +54,7 @@
   "Edit": "编辑",
   "Copy": "复制",
   "Copied": "已复制",
+  "Cut": "剪切",
   "Internal_link": "内部链接",
   "Copy_internal_link": "内部链接已复制到剪贴板",
   "Internal_link_desc": "内部链接是指向文件或目录的链接，只有对该文件或目录有访问权限的人可以访问。",
