--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -54,7 +54,7 @@
   "Edit": "Редактировать",
   "Copy": "Копировать",
   "Copied": "Скопировано",
-  "Cut": "Cut",
+  "Cut": "Вырезать",
   "Internal_link": "Внутренняя ссылка",
   "Copy_internal_link": "Внутренняя ссылка скопирована в буфер обмена",
   "Internal_link_desc": "Внутренняя ссылка - это ссылка на файл или папку, к которым могут обращаться пользователи с правами на чтение файла или папки.",
