--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -424,5 +424,6 @@
   "Row_number": "Номер строки",
   "Column_number": "Номер столбца",
   "The_maximum_row_number_is_{number}": "Максимальное количество строк - {number}",
-  "The_maximum_column_number_is_{number}": "Максимальное количество столбцов - {number}"
+  "Freeze_Document": "Freeze Document",
+  "Unfreeze": "Unfreeze"
 }
