update sdoc version and sdoc translate

--- a/media/sdoc-editor/locales/es/sdoc-editor.json
+++ b/media/sdoc-editor/locales/es/sdoc-editor.json
@@ -424,9 +424,21 @@
   "Row_number": "Row number",
   "Column_number": "Column number",
   "The_maximum_row_number_is_{number}": "The maximum row number is {number}",
-  "Freeze_Document": "Freeze Document",
-  "Unfreeze": "Unfreeze",
   "Other_modification": "Other's modification",
   "My_modification": "My modification",
-  "Document_history": "Document history"
+  "Document_history": "Document history",
+  "Freeze_Document": "Freeze Document",
+  "Unfreeze": "Unfreeze",
+  "Search_and_replace": "Search and replace",
+  "Search": "Buscar",
+  "Type_search_content": "Type search content",
+  "Replace_as": "Replace as",
+  "Type_replace_content": "Type replace content",
+  "Previous": "Anterior",
+  "Next": "Siguiente",
+  "Replace": "Reemplazar",
+  "Replace_all": "Replace all",
+  "Are_you_sure_to_replace_all_number_xxx_in_this_document_with_yyy": "Are you sure to replace all {{number}} '{{originalWord}}' in this document with '{{replacedWord}}'?",
+  "Are_you_sure_to_clear_all_number_xxx_in_this_document": "Are you sure to clear all {{number}} '{{originalWord}}' in this document?",
+  "Search_not_found": "Not found"
 }
