--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -424,9 +424,21 @@
   "Row_number": "Номер строки",
   "Column_number": "Номер столбца",
   "The_maximum_row_number_is_{number}": "Максимальное количество строк - {number}",
-  "Freeze_Document": "Заморозить документ",
-  "Unfreeze": "Разморозить",
   "Other_modification": "Другая модификация",
   "My_modification": "Моя модификация",
-  "Document_history": "История документа"
+  "Document_history": "История документа",
+  "Freeze_Document": "Заморозить документ",
+  "Unfreeze": "Разморозить",
+  "Search_and_replace": "Search and replace",
+  "Search": "Поиск",
+  "Type_search_content": "Type search content",
+  "Replace_as": "Replace as",
+  "Type_replace_content": "Type replace content",
+  "Previous": "Предыдущий",
+  "Next": "Следующий",
+  "Replace": "Заменить",
+  "Replace_all": "Replace all",
+  "Are_you_sure_to_replace_all_number_xxx_in_this_document_with_yyy": "Are you sure to replace all {{number}} '{{originalWord}}' in this document with '{{replacedWord}}'?",
+  "Are_you_sure_to_clear_all_number_xxx_in_this_document": "Are you sure to clear all {{number}} '{{originalWord}}' in this document?",
+  "Search_not_found": "Not found"
 }
