--- a/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
@@ -424,9 +424,21 @@
   "Row_number": "行数",
   "Column_number": "列数",
   "The_maximum_row_number_is_{number}": "最大行数为 {number}",
-  "Freeze_Document": "冻结文档",
-  "Unfreeze": "取消冻结",
   "Other_modification": "他人更改",
   "My_modification": "我的更改",
-  "Document_history": "文档历史"
+  "Document_history": "文档历史",
+  "Freeze_Document": "冻结文档",
+  "Unfreeze": "取消冻结",
+  "Search_and_replace": "查找和替换",
+  "Search": "搜索",
+  "Type_search_content": "输入查找内容",
+  "Replace_as": "替换为",
+  "Type_replace_content": "输入替换内容",
+  "Previous": "上一个",
+  "Next": "下一页",
+  "Replace": "替换",
+  "Replace_all": "下一个",
+  "Are_you_sure_to_replace_all_number_xxx_in_this_document_with_yyy": "确定要将此文档内的 {{number}} 处 \"{{originalWord}} \" 替换为 \"{{replacedWord}} \" 吗？",
+  "Are_you_sure_to_clear_all_number_xxx_in_this_document": "确定将此文档内的 {{number}} 处 \"{{originalWord}}\" 全部清除吗?",
+  "Search_not_found": "未找到"
 }
