--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -429,16 +429,16 @@
   "Document_history": "История документа",
   "Freeze_Document": "Заморозить документ",
   "Unfreeze": "Разморозить",
-  "Search_and_replace": "Search and replace",
+  "Search_and_replace": "Поиск и замена",
   "Search": "Поиск",
-  "Type_search_content": "Type search content",
-  "Replace_as": "Replace as",
-  "Type_replace_content": "Type replace content",
+  "Type_search_content": "Введите содержимое для поиска",
+  "Replace_as": "Заменить как",
+  "Type_replace_content": "Введите содержимое для замены",
   "Previous": "Предыдущий",
   "Next": "Следующий",
   "Replace": "Заменить",
-  "Replace_all": "Replace all",
-  "Are_you_sure_to_replace_all_number_xxx_in_this_document_with_yyy": "Are you sure to replace all {{number}} '{{originalWord}}' in this document with '{{replacedWord}}'?",
-  "Are_you_sure_to_clear_all_number_xxx_in_this_document": "Are you sure to clear all {{number}} '{{originalWord}}' in this document?",
-  "Search_not_found": "Not found"
+  "Replace_all": "Заменить все",
+  "Are_you_sure_to_replace_all_number_xxx_in_this_document_with_yyy": "Вы уверены, что хотите заменить все {{number}} '{{originalWord}}' в этом документе на '{{replacedWord}}'?",
+  "Are_you_sure_to_clear_all_number_xxx_in_this_document": "Вы уверены, что хотите очистить все {{number}} '{{originalWord}}' в этом документе?",
+  "Search_not_found": "Не найдено"
 }
