--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -427,7 +427,7 @@
   "Other_modification": "Другая модификация",
   "My_modification": "Моя модификация",
   "Document_history": "История документа",
-  "Freeze_Document": "Заморозить документ",
+  "Freeze_document": "Заморозить документ",
   "Unfreeze": "Разморозить",
   "Search_and_replace": "Поиск и замена",
   "Search": "Поиск",
