--- a/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
@@ -427,7 +427,7 @@
   "Other_modification": "他人更改",
   "My_modification": "我的更改",
   "Document_history": "文档历史",
-  "Freeze_Document": "冻结文档",
+  "Freeze_document": "冻结文档",
   "Unfreeze": "取消冻结",
   "Search_and_replace": "查找和替换",
   "Search": "搜索",
