--- a/media/sdoc-editor/locales/it/sdoc-editor.json
+++ b/media/sdoc-editor/locales/it/sdoc-editor.json
@@ -427,7 +427,7 @@
   "Other_modification": "Other's modification",
   "My_modification": "My modification",
   "Document_history": "Document history",
-  "Freeze_Document": "Freeze Document",
+  "Freeze_document": "Freeze document",
   "Unfreeze": "Unfreeze",
   "Search_and_replace": "Search and replace",
   "Search": "Search",
