--- a/media/sdoc-editor/locales/de/sdoc-editor.json
+++ b/media/sdoc-editor/locales/de/sdoc-editor.json
@@ -427,14 +427,14 @@
   "Other_modification": "Other's modification",
   "My_modification": "My modification",
   "Document_history": "Document history",
-  "Freeze_document": "Freeze document",
+  "Freeze_Document": "Freeze Document",
   "Unfreeze": "Unfreeze",
   "Search_and_replace": "Search and replace",
   "Search": "Suchen",
   "Type_search_content": "Type search content",
   "Replace_as": "Replace as",
   "Type_replace_content": "Type replace content",
-  "Previous": "Vorherige",
+  "Prevs": "Prevs",
   "Next": "Nächste Seite",
   "Replace": "Ersetzen",
   "Replace_all": "Replace all",
