--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -427,14 +427,14 @@
   "Other_modification": "Другая модификация",
   "My_modification": "Моя модификация",
   "Document_history": "История документа",
-  "Freeze_document": "Заморозить документ",
+  "Freeze_Document": "Заморозить документ",
   "Unfreeze": "Разморозить",
   "Search_and_replace": "Поиск и замена",
   "Search": "Поиск",
   "Type_search_content": "Введите содержимое для поиска",
   "Replace_as": "Заменить как",
   "Type_replace_content": "Введите содержимое для замены",
-  "Previous": "Предыдущий",
+  "Prevs": "Prevs",
   "Next": "Следующий",
   "Replace": "Заменить",
   "Replace_all": "Заменить все",
