--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -440,5 +440,9 @@
   "Replace_all": "Заменить все",
   "Are_you_sure_to_replace_all_number_xxx_in_this_document_with_yyy": "Вы уверены, что хотите заменить все {{number}} '{{originalWord}}' в этом документе на '{{replacedWord}}'?",
   "Are_you_sure_to_clear_all_number_xxx_in_this_document": "Вы уверены, что хотите очистить все {{number}} '{{originalWord}}' в этом документе?",
-  "Search_not_found": "Не найдено"
+  "Search_not_found": "Не найдено",
+  "Recent_previews": "Recent previews",
+  "The_document_does_not_exist": "The document does not exist",
+  "Create_a_new_sdoc_file": "Create a new sdoc file",
+  "Create": "Создать"
 }
